<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_synchronize"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:onClick="onClickMenuSync"
        android:title="@string/action_synchronize"/>
    
    <item 
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="101"
        android:onClick="onClickMenuSettings"
        android:title="@string/action_settings"/>

    <item 
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="101"
        android:onClick="onClickMenuInfo"
        android:title="@string/action_info"/>
    <item
        android:id="@+id/action_region"
        android:icon="@drawable/ic_action_region"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:onClick="onClickRegion"
        android:title="@string/action_region"/>

</menu>