<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/reportWizardFooter"
    android:layout_alignParentLeft="true"
    android:layout_below="@id/reportWizardHeader"
    android:layout_marginLeft="2.5dp"
    android:layout_marginRight="2.5dp"
    android:background="@drawable/report_background"
    android:orientation="vertical" >

    <RelativeLayout 
        android:id="@+id/reportWizardDateTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="2.5dp"
        android:paddingLeft="5dp" 
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/reportWizardDateTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="top|left"
            android:clickable="false"
            android:ems="5"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:gravity="left"
            android:textColor="@color/report_label_text"
            android:text="@string/report_wizard_screen_2_time_label"
            android:textStyle="bold"
            android:textSize="@dimen/report_text_size" />

        <TextView
            android:id="@+id/reportWizardDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/reportWizardDateTimeLabel"
            android:layout_toLeftOf="@+id/reportWizardBtnEditDateTime"
            android:lines="2"
            android:textIsSelectable="true"
            android:gravity="left"
            android:textColor="@color/report_label_text"
            android:textSize="@dimen/report_text_size" />     
        <ImageButton
            android:id="@id/reportWizardBtnEditDateTime"
            style="@style/ReportImageButtonStyle"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/reportWizardDateTime"
            android:src="@drawable/btn_edit_time" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/reportWizardLocationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="2.5dp"
        android:paddingLeft="5dp" 
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/reportWizardLocationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="top|left"
            android:clickable="false"
            android:ems="5"
            android:focusable="false"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:gravity="left"
            android:text="@string/report_wizard_screen_2_location_label"
            android:textColor="@color/report_label_text"
            android:textStyle="bold"
            android:textSize="@dimen/report_text_size" />

        <TextView 
            android:id="@+id/reportWizardLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/reportWizardLocationLabel"
            android:layout_toLeftOf="@+id/reportWizardBtnEditLocation"
            android:textIsSelectable="true"
            android:singleLine="false"
            android:lines="3"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:gravity="left"
            android:textColor="@color/report_label_text"
            android:textSize="@dimen/report_text_size" />
        <ImageButton
            android:id="@id/reportWizardBtnEditLocation"
            style="@style/ReportImageButtonStyle"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:src="@drawable/btn_edit_location" />
    </RelativeLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingTop="2.5dp"
        android:paddingBottom="2.5dp"
        android:background="@color/report_edit_bg"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false" />
    
    <RelativeLayout 
        android:id="@+id/reportWizardOffenseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="2.5dp"
        android:paddingLeft="5dp" 
        android:paddingRight="5dp" >
        
        <TextView
            android:id="@+id/reportWizardOffenseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:clickable="false"
            android:ems="5"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:gravity="left"
            android:textColor="@color/report_label_text"
            android:text="@string/report_wizard_screen_2_offense_label"
            android:textStyle="bold"
            android:textSize="@dimen/report_text_size" />

        <EditText 
            android:id="@+id/reportWizardOffense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/reportWizardOffenseLabel"
            android:layout_alignParentRight="true"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textIsSelectable="true"
            android:lines="8"
            android:maxLength="512"
            android:gravity="left"
            android:hint="@string/report_wizard_screen_2_offense_hint"
            android:inputType="text|textMultiLine"
            android:background="@color/report_edit_bg"
            android:textSize="@dimen/report_text_size" />
        
    </RelativeLayout>

    <RelativeLayout 
        android:id="@+id/reportWizardSpeciesLayout"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="2.5dp"
        android:paddingLeft="5dp" 
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/reportWizardSpeciesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical|left"
            android:clickable="false"
            android:ems="5"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:gravity="left"
            android:text="@string/report_wizard_screen_2_species_label"
            android:textColor="@color/report_label_text"
            android:textStyle="bold"
            android:textSize="@dimen/report_text_size" />

        <org.freeland.wildscan.widget.SearchAutoCompleteView 
            android:id="@+id/reportWizardSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/reportWizardSpeciesLabel"
            android:layout_toLeftOf="@+id/reportWizardBtnIdSpecies"
            android:layout_gravity="center_vertical"
            android:padding="4dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:completionThreshold="2"
            android:dropDownWidth="wrap_content"
            android:textIsSelectable="true"
            android:lines="2"
            android:gravity="left"
            android:hint="@string/report_wizard_screen_2_species_hint"
            android:inputType="text|textNoSuggestions"
            android:background="@color/report_edit_bg"
            android:textSize="@dimen/report_text_size" />
        <ImageButton
            android:id="@id/reportWizardBtnIdSpecies"
            style="@style/ReportImageButtonStyle"
            android:layout_gravity="bottom"
            android:layout_alignParentRight="true"
            android:src="@drawable/btn_id_species" />
        
	</RelativeLayout>

    <RelativeLayout 
        android:id="@+id/reportWizardAmountLayout"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="2.5dp"
        android:paddingLeft="5dp" 
        android:paddingRight="5dp" >
        
        <TextView
            android:id="@+id/reportWizardAmountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:clickable="false"
            android:ems="5"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:gravity="left"
            android:text="@string/report_wizard_screen_2_amount_label"
            android:textColor="@color/report_label_text"
            android:textStyle="bold"
            android:textSize="@dimen/report_text_size" />
        
        <EditText 
            android:id="@+id/reportWizardAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/reportWizardAmountLabel"
            android:layout_toLeftOf="@+id/reportWizardAmountRadio"
            android:padding="4dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textIsSelectable="true"
            android:singleLine="true"
            android:gravity="left"
            android:inputType="number|numberDecimal"
            android:background="@color/report_edit_bg"
            android:textSize="@dimen/report_text_size" />
        
        <RadioGroup
            android:id="@id/reportWizardAmountRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >
            <RadioButton 
                android:id="@+id/reportWizardAmountUnits"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/report_radio_btn_text_size"
	            android:textColor="@color/report_label_text"
                android:text="@string/report_wizard_screen_2_amount_unit_label" />
            <RadioButton 
                android:id="@+id/reportWizardAmountKg"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/report_radio_btn_text_size"
	            android:textColor="@color/report_label_text"
                android:text="@string/report_wizard_screen_2_amount_weight_label" />
		</RadioGroup>
    </RelativeLayout>
    
	<RelativeLayout 
        android:id="@+id/reportWizardConditionLayout"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="2.5dp"
        android:paddingLeft="5dp" 
        android:paddingRight="5dp" >
        
        <TextView
            android:id="@+id/reportWizardConditionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_alignParentLeft="true"
            android:clickable="false"
            android:focusable="false"
            android:gravity="left"
            android:ems="5"
            android:text="@string/report_wizard_screen_2_condition_label"
            android:textColor="@color/report_label_text"
            android:textStyle="bold"
            android:textSize="@dimen/report_text_size" />
        
        <RadioGroup
            android:id="@+id/reportWizardConditionRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/reportWizardConditionLabel"
            android:orientation="horizontal" >
            <RadioButton 
                android:id="@+id/reportWizardConditionAlive"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/report_radio_btn_text_size"
        	    android:textColor="@color/report_label_text"
                android:text="@string/report_wizard_screen_2_condition_alive_label" />
            <RadioButton 
                android:id="@+id/reportWizardConditionDead"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/report_radio_btn_text_size"
    	        android:textColor="@color/report_label_text"
                android:text="@string/report_wizard_screen_2_condition_dead_label" />
            <RadioButton 
                android:id="@+id/reportWizardConditionMixed"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/report_radio_btn_text_size"
	            android:textColor="@color/report_label_text"
                android:text="@string/report_wizard_screen_2_condition_mixed_label" />
		</RadioGroup>
        
	</RelativeLayout>
    
</LinearLayout>
